Online Quiz: Complete Question page and other minor things